--- a/Signin.css
+++ b/Signin.css
@@ -15,11 +15,11 @@
 #center {
     background-color: aliceblue;
     color:#343a40;
-    height:53%;
+    height:58%;
     width:30%;
     z-index: 1;
 }
-#welcome{
+#create{
     padding:30px 0px 0px 50px;
 }
 p{
@@ -27,7 +27,7 @@ p{
     font-weight: 350;
 }
 #main{
-    height: 60%;
+    height: 80%;
     width:100%;
 }
 #text{
@@ -48,39 +48,12 @@ p{
     border-bottom:1px solid #343a40;
     outline: none;
 }
-#rem_me{
-    margin-left:53px;
-    height:auto;
-    width:100%;
-    color:#343a40;
-    font-size: small;
-}
 #sign{
     height:40px;
     width:100px;
-    margin-left:50px;
+    margin-left:120px;
     background-color: aliceblue;
     border: 1.5px solid #38b000;
     color:#38b000;
     transition: all 0.5s ease 0s;
-}
-#fp{
-    height:40px;
-    width:140px;
-    margin-left:40px;
-    background-color: aliceblue;
-    border:none;
-    text-decoration: none;
-    color:inherit;
-}
-#down{
-    font-weight:350;
-    background-color: #e5e5e5;
-    height: 60px;
-    width:100%;
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color:#343a40;
 }
